@@ -1,0 +1,63 @@
+﻿//
+// Interop.FreeBSD.types.cs
+//
+// Author:
+//       Natalia Portillo <claunia@claunia.com>
+//
+// Copyright (c) 2015 © Claunia.com
+//
+// Permission is hereby granted, free of charge, to any person obtaining a copy
+// of this software and associated documentation files (the "Software"), to deal
+// in the Software without restriction, including without limitation the rights
+// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+// copies of the Software, and to permit persons to whom the Software is
+// furnished to do so, subject to the following conditions:
+//
+// The above copyright notice and this permission notice shall be included in
+// all copies or substantial portions of the Software.
+//
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+// THE SOFTWARE.
+using System.Runtime.InteropServices;
+using System;
+
+internal static partial class Interop
+{
+    internal static partial class FreeBSD
+    {
+        [StructLayout(LayoutKind.Sequential)]
+        internal struct Timespec
+        {
+            /// <summary>
+            /// Seconds
+            /// </summary>
+            [MarshalAs(UnmanagedType.I4)]
+            public Int32 tv_sec;
+            /// <summary>
+            /// Nanoseconds
+            /// </summary>
+            [MarshalAs(UnmanagedType.I4)]
+            public Int32 tv_nsec;
+        }
+
+        [StructLayout(LayoutKind.Sequential)]
+        internal struct Timespec64
+        {
+            /// <summary>
+            /// Seconds
+            /// </summary>
+            [MarshalAs(UnmanagedType.I4)]
+            public Int64 tv_sec;
+            /// <summary>
+            /// Nanoseconds
+            /// </summary>
+            [MarshalAs(UnmanagedType.I4)]
+            public Int64 tv_nsec;
+        }
+    }
+}
