@@ -1,5 +1,12 @@
 2015-05-03  Natalia Portillo  <claunia@claunia.com>
 
+	* Claunia.IO.csproj:
+	* Interop/FreeBSD/Interop.FreeBSD.stat.cs:
+	* Interop/FreeBSD/Interop.FreeBSD.types.cs:
+	  Implement FreeBSD's stat(2).
+
+2015-05-03  Natalia Portillo  <claunia@claunia.com>
+
 	* Interop/Linux/Interop.Linux.stat.cs:
 	  Manpages are in octal, corrected typo.
 
